fixed: gap on nav bar

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,6 +41,7 @@ body {
 }
 .tags{
     display: flex;
+    gap: 1rem;
 }
 
 
